# rs-kafka-mongo

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
src/: config.rs  lib.rs  main.rs  state.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  utils.rs
src/db/: mongo.rs
src/kafka/: producer.rs
src/message/: handlers.rs  models.rs  utils.rs
src/products/: handlers.rs  mod.rs  models.rs  utils.rs
