[package]
name = "rs-kafka-mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["json", "macros"] }
bcrypt = "0.17.0"
bson = { version = "2.14.0", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.3"
rdkafka = { version = "0.37.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
